--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -5,9 +5,11 @@
 ### Diverse oppsett
 
 - "Auto detection" av "file encoding": Gå inn på *File/Preferences/Settings/* og legg inn følgende kode:
-    {
-        "files.autoGuessEncoding":true
-    }
+```json
+{
+    "files.autoGuessEncoding":true
+}
+```
 
 ### Extensions
 
